# BrainNetAnno

./: .readthedocs.yaml  MANIFEST.in  README.md  example.py  pyproject.toml  setup.cfg
docs/: api.rst  changelog.rst  conf.py  index.rst  install.rst
source/: Example.rst  conf.py  enrichment_celltype.rst  enrichment_layer.rst  index.rst  modules.rst  neurotransmitter_pls.rst  pipeline_example.rst  transcriptome.rst  transcriptome_pls.rst  usage.rst
source/_autosummary/: BrainNetAnno.gene_layer.rst  BrainNetAnno.mitochondrial_pls_cge.rst  BrainNetAnno.neurotransmitter_pls_cge.rst  BrainNetAnno.rst
source/_static/: custom.css
src/BrainNetAnno/: __init__.py  gene_celltype.py  gene_layer.py  mitochondrial.py  mitochondrial_pls_cge.py  neurotransmitter.py  neurotransmitter_pls_cge.py  transcriptome.py  transcriptome_pls_cge.py  utils.py
tests/examples/: example_enrichment_celltype.py  example_enrichment_layer.py  example_mitochondrial.py  example_mitochondrial_pls.py  example_neurotransmitter.py  example_neurotransmitter_pls.py  example_transcriptome.py  example_transcriptome_pls.py
